# TimeGlyd

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml  release.yml  updater-system.yml
src/: App.scss  App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: macos.rs  main.rs  spotlight.rs
src/components/Clock/: Clock.scss  index.tsx
src/components/Search/: index.tsx
src/components/Settings/: Settings.scss  index.tsx
src/components/ShortcutRecorder/: ShortcutRecorder.scss  index.tsx  shortcut.ts
src/components/Slider/: Slider.scss  index.tsx
src/components/ToggleButton/: ToggleButton.scss  index.tsx
src/config/: settings-manager.ts  shortcut-manager.ts
src/hooks/: useDebounce.ts  useRequestAnimationFrame.tsx
src/utils/: search-index.ts  time.ts  update.ts
